Redo the pull request

--- a/todo.txt
+++ b/todo.txt
@@ -9,14 +9,15 @@ DONE!!  If an element is shownWhileCalling, and the element_type is boolean, it 
 DONE!!   edit/delete buttons only availbe to admin users
 DONE!!   in add new record, have it mirror activeTemplate elements
 DONE!!   debug the two checkboxes in addNewRecord (they both check and unCheck together)
+*    make getTableData a realtime listener 
 *    edit/deletes connected to database 
 DONE!!  sorting not working properly (balance does not decend properly)
 DONE!!  fix date formatting
 DONE!!  fix boolean values in table (should be 'true' to 'false')
 *    debug number-of-items-shown menu at bottom of the table (sometimes it doesnt open) 
-karla    in add new record, csv file upload option     
-karla    change 'filter' to 'search'
-karla    debug addNewRecord so it doesn't show validation errors after submitting
+- karla    in add new record, csv file upload option     
+- karla    change 'filter' to 'search'
+- karla    debug addNewRecord so it doesn't show validation errors after submitting
 DONE!!  phone number and balance not showing up when editing a single record (this is a formatting problem - needs to be strictly numbers, no () or $)
 
 
