--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 DONE!!  Create admin component
 DONE!!  Create admin (admin-conditional) menu item 
-    Create, Read, Edit, Delete INFO TEMPLATE
+    Create, Read, Edit, Delete INFO TEMPLATE (check that no users have deleted template as active)
 DONE!!  Chooses between info templets
 DONE!!  If an element is shownWhileCalling, and the element_type is boolean, it should display as a checkbox
 
@@ -16,7 +16,7 @@ DONE!!   edit/deletes connected to database
 DONE!!   sorting not working properly (balance does not decend properly)
 DONE!!   fix date formatting
 DONE!!   fix boolean values in table (should be 'true' to 'false')
-DONE!!   debug number-of-items-shown menu at bottom of the table (sometimes it doesnt open) 
+*   debug number-of-items-shown menu at bottom of the table (sometimes it doesnt open) 
 - karla    in add new record, csv file upload option     
 - karla    change 'filter' to 'search'
 - karla    debug addNewRecord so it doesn't show validation errors after submitting
@@ -24,5 +24,8 @@ DONE!!  phone number and balance not showing up when editing a single record (th
 
 
 
-Active template needs to be attached to a user, not the whole account
+DONE!!  Active template needs to be attached to a user, not the whole account
+get rid of getActiveTemplate service function
+user to change templates
+
 Data leak on forms.component.ts - init database call is fired on every page load
