--- a/todo.txt
+++ b/todo.txt
@@ -16,12 +16,19 @@ DONE!!   edit/deletes connected to database
 DONE!!   sorting not working properly (balance does not decend properly)
 DONE!!   fix date formatting
 DONE!!   fix boolean values in table (should be 'true' to 'false')
-*   debug number-of-items-shown menu at bottom of the table (sometimes it doesnt open) 
+DONE!!   debug number-of-items-shown menu at bottom of the table (sometimes it doesnt open) 
 - karla    in add new record, csv file upload option     
 - karla    change 'filter' to 'search'
 - karla    debug addNewRecord so it doesn't show validation errors after submitting
 DONE!!  phone number and balance not showing up when editing a single record (this is a formatting problem - needs to be strictly numbers, no () or $)
 
+
+-- adminPage --
+    change userName to email
+    admin user to create and add roles to users
+    roles need to be an array 
+    add 'activeTemplate' to createUser options
+    
 
 
 DONE!!  Active template needs to be attached to a user, not the whole account
