--- a/todo.txt
+++ b/todo.txt
@@ -31,7 +31,7 @@ DONE!!  phone number and balance not showing up when editing a single record (th
     admin user to create and add roles to users
     roles need to be an array 
     add 'activeTemplate' to createUser options
-    remove deactiveate feature from activeTemplate 
+DONE!!    remove deactiveate feature from activeTemplate 
     add templateName to any group that a user creates 
 DONE!!  Active template needs to be attached to a user, not the whole account
     get rid of getActiveTemplate service function
