--- a/todo.txt
+++ b/todo.txt
@@ -53,10 +53,12 @@ DONE!!    populate autoDialer child component with dialSessionArray
         Softphone
         SMS Text
     Record and store audio files for voicemails
-    Finish CSV upload feature
+DONE!!  Finish CSV upload feature
     Auto create goups based on customer statuses (No Attention Required, Pending, Handled, etc...)
     Add unsubscribe to all components as necessary
     When deleting or editing a template status, check that no customers will be effected.  If so, throw an error.
+    Don't allow deletion of template that is active by any user
+    When creating new template, there must be a phonenumber field
 
 
     Phone Form
