--- a/todo.txt
+++ b/todo.txt
@@ -47,7 +47,7 @@ DONE!!    populate autoDialer child component with current call phone number
 DONE!!    populate autoDialer child component with dialSessionArray
 
 
--- For VFP -- 
+-- For MVP -- 
 
     Connect Twilio 
         Softphone
@@ -59,6 +59,7 @@ DONE!!  Finish CSV upload feature
     When deleting or editing a template status, check that no customers will be effected.  If so, throw an error.
     Don't allow deletion of template that is active by any user
     When creating new template, there must be a phonenumber field
+    * Fix address to look for element_type, not element_placeholder or name
 
 
     Phone Form
@@ -83,6 +84,8 @@ DONE!!  In add new template, can we create a boundry between the fields and stat
 DONE!!  In an existing template, a user should be able to add statuses, but not template fields.  
 DONE!!  Admin user to create and add roles to users (a third top menu option - 'Roles' - where admin can create roles that are assigned in the 'Users' tab)
 DONE!!  In User tab, roles should be a dropdown with the roles that are created by Admin in the Roles tab.
+        Add isVisable to template fields (blobData and templateName needs to be true)
+        * Handle input verification for fields (email, dates, addresses, etc...)
 
     Settings
         For the preview of voicemails, the save button needs to appear and be active if there is a template name and audio recording (url)
